# БР1.1/Преображенский Артемий/labs/lab2/restaurant-booking/auth-service/docs/openapi.yaml
@@ -9,7 +9,7 @@ servers:
 tags:
   - name: auth
     description: Публичные эндпоинты аутентификации
-  - name: internal
+  - name: service
     description: Межсервисное взаимодействие
 
 paths:
@@ -62,9 +62,9 @@ paths:
               schema: { $ref: '#/components/schemas/User' }
         '401': { description: Unauthorized }
 
-  /internal/users/{id}:
+  /service/users/{id}:
     get:
-      tags: [internal]
+      tags: [service]
       summary: Получить пользователя по id
       parameters:
         - in: path
